fixing layout top-margin on small screen and commenting out p2p-rm broken deeplinking

--- a/main.scss
+++ b/main.scss
@@ -49,7 +49,7 @@ $layoutsidemargin: 50px;
   .layout {
     margin-right:$layoutsidemargin;
     margin-left: $layoutsidemargin;
-    margin-top: $horizontalmenuheight + $layoutsidemargin;
+    margin-top: 10px;
   }
   h1 {
     font-size: 15vw;
